# nvoclock

./: .gitignore  .travis.yml  Cargo.toml  README.md  ci.nix  default.nix  derivation.nix  flake.nix  lock.nix  shell.nix
.github/workflows/: nvoclock.yml
src/: auto.rs  conv.rs  error.rs  human.rs  main.rs  types.rs
