[package]
name = "nvoclock"
version = "0.0.4"
authors = ["arcnmx"]
edition = "2021"

description = "NVIDIA overclocking CLI"
keywords = ["nvidia", "gtx", "gpu", "nvapi", "overclock"]

documentation = "http://github.com/arcnmx/nvoclock"
repository = "https://github.com/arcnmx/nvoclock"
readme = "README.md"
license = "MIT"

include = [
	"/src/**",
	"/README*",
	"/COPYING*",
]

[profile.dev]
panic = "abort"
[profile.test]
panic = "abort"
[profile.bench]
panic = "abort"
[profile.release]
panic = "abort"
opt-level = 2
lto = true

[dependencies]
nvapi = { package = "nvapi-hi", version = "0.2.0", features = ["serde"], git = "https://github.com/arcnmx/nvapi-rs", branch = "v0.2.x" }
clap = { version = "2.26.2", default-features = false }
prettytable-rs = { version = "0.8.0", default-features = false }
quick-error = "2.0.0"
log = "0.4.0"
env_logger = "0.9.0"
csv = "1.1.0"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
